<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/school">

    <TextView
        android:text="@string/welcome"
        android:textSize="45sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/welocme"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:gravity="center_horizontal"
        android:id="@+id/username"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="17sp"
        android:id="@+id/password" />

    <Button
        android:text="@string/login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:onClick="loginnow"
        android:background="#0000ff"
        android:layout_height="wrap_content"
        android:id="@+id/login" />


</LinearLayout>