<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regpic">

    <TextView
        android:text="@string/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="cursive"
        android:textColor="#ffffff"
        android:id="@+id/reg_text" />

    <EditText
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/new_name" />

    <EditText
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="Mobile no"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/mobile" />

    <EditText
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/new_email"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/new_email" />

    <EditText
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/new_pass"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/new_pass" />

    <EditText
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/re_pass"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/new_re_pass" />

    <Button
        android:text="register"
        android:onClick="regnow"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="150dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reg" />
</LinearLayout>