<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66afcc"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rose.dks.attendance11.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4e6653"
        android:clickable="false">


        <TextView
            android:text="Student Section"
            android:fontFamily="cursive"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/studentsection" />

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:fontFamily="casual"
            android:textColor="#aaaaff"
            android:textStyle="bold"
            android:text="Check your Attendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkattendance" />

        <EditText
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:hint="@string/roll"
            android:layout_gravity="center"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/rollno" />

        <TextView
            android:text="Branch"
            android:fontFamily="casual"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:layout_gravity="left"
            android:gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectbranch"
            android:textAllCaps="false" />

        <Spinner
            android:layout_width="250dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_branch" />

        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:text="Year"
            android:fontFamily="casual"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:layout_gravity="left"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectyear" />

        <Spinner
            android:layout_width="150dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_year" />

        <Button
            android:layout_marginTop="20dp"
            android:text="Check Attenadance"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check"
            android:textColor="#000000"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
            android:fontFamily="monospace"
            style="@android:style/Widget.Button"
            android:onClick="btncheck" />

        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text=""
            android:background="@drawable/boarder2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/textView8" />

        <TextView
            android:text="Faculity section"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/faculity"
            android:textSize="30sp"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:typeface="normal"
            android:textColor="@android:color/holo_purple"
            android:textAlignment="center" />

        <Button
            android:text="@string/login"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginbtn"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textColor="#669922"
            android:onClick="btnlogin" />

        <Button
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/reg"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerbtn"
            android:onClick="btnreg"
            android:textSize="18dp"
            android:textColor="#3333ff"
            android:textAllCaps="false"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
